# autospec

./: .envrc  .gitignore  ADD_SSH_KEY.md  BUILD_INSTRUCTIONS.md  CODE_REVIEW.md  DEV_MODE_FIX.md  DEV_MODE_SOLUTIONS.md  FINAL_BUILD_SOLUTION.md  FIX_BUILD_ERROR.md  GITHUB_SETUP.md  IMPROVEMENTS.md  INSTALL_RUST.md  KNOWN_ISSUES.md  LICENSE  PROJECT_SUMMARY.md  PR_DETAILS.md  QUICK_FIX.md  QUICK_START.md  README.md  SETUP.md  SETUP_RUST.md  TROUBLESHOOTING.md  URGENT_FIX.md  WORKAROUND.md  build-cargo-only.sh  build-clean.sh  build-direct-cargo.sh  build-direct.sh  build-final.sh  build-pure-cargo.sh  build-rust-only.sh  build-workaround.sh  build.sh  dev-aggressive.sh  dev-direct.sh  dev-vite-only.sh  dev.sh  index.html  package-lock.json  package.json  (+3 more)
.github/workflows/: build.yml
mcp-server/: README.md  package.json
mcp-server/src/: index.ts
src/: App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src/components/: AIChat.tsx  Editor.tsx  NotificationToast.tsx  ReviewPanel.tsx  SettingsModal.tsx  Sidebar.tsx
src/utils/: id.ts  notifications.ts  persistence.ts  templateLoader.ts
templates/: api-template.json  web-app-template.json
