[package]
name = "autospec"
version = "0.1.0"
description = "A tool for writing requirements documents for AI agents"
authors = ["Christina-Young"]
license = "MIT"
repository = "https://github.com/Christina-Young/autospec"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["dialog-all", "fs-all"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

